--- a/ex2.html
+++ b/ex2.html
@@ -10,6 +10,7 @@
 
 	<div>
 		<button>Draw Lottery Numbers</button>
+		<button>Clear</button>
 
 	</div>
 
@@ -18,7 +19,7 @@
 
 	<div>
 		<button>Draw Lottery Numbers</button>
-
+		<button>Clear</button>
 	</div>
 
 
@@ -26,7 +27,7 @@
 
 <div>
 		<button>Draw Lottery Numbers</button>
-
+		<button>Clear</button>
 	</div>
 
 
